--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>    
-    <script src="jb.js"></script>    
+    <script src="./jb.js"></script>    
     
   </head>
   <body>
