--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Test</h1>
+      <h1 class="project-name">Maison checkup et analyses</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/jburdy/test" class="btn">View on GitHub</a>
+      	<a href="https://github.com/jburdy/test" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
